symmetrical-broccoli-routetable-ap-northeast-2
{
    "RouteTable": {
        "Associations": [], 
        "RouteTableId": "rtb-add235c5", 
        "VpcId": "vpc-b28686db", 
        "PropagatingVgws": [], 
        "Tags": [], 
        "Routes": [
            {
                "GatewayId": "local", 
                "DestinationCidrBlock": "10.10.10.0/24", 
                "State": "active", 
                "Origin": "CreateRouteTable"
            }
        ]
    }
}
